hphp/hack/test/typecheck/function_hint_with_variadic_parameter_not_covariant_2.php
<?hh

class A {}

class B extends A {}

function variadic_B(B ...$y): void {}

function hint_variadic_A((function(A...): void) $f): void {}

function test(): void {
  hint_variadic_A(variadic_B<>);
}
